[package]
authors = ["Jay Graber <graber.jay@gmail.com>"]
description = "examples for bellman zk-SNARK library"
license = "MIT/Apache-2.0"
name = "bellman-tutorial"
version = "0.1.0"

[dependencies]
rand = "0.4"
bit-vec = "0.4.4"
byteorder = "1"
bellperson = "0.9.2"
paired = "0.20.0"
ff = { version = "0.2.0", package = "fff" }
rand_core = "0.5.1"
log = ""
fil_logger = ""